--- a/FE/package.json
+++ b/FE/package.json
@@ -22,7 +22,8 @@
     "@unhead/vue": "^2.0.17",
     "better-sqlite3": "^12.4.1",
     "eslint": "^9.36.0",
-    "nuxt": "^4.1.2",
+    "three": "^0.180.0",
+    "three-globe": "^2.44.0",
     "typescript": "^5.9.2",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
@@ -30,6 +31,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
     "@tailwindcss/vite": "^4.1.14",
+    "@types/node": "^24.6.2",
+    "nuxt": "^4.1.2",
     "tailwindcss": "^4.1.14"
   }
 }
